# somnia

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  bootstrap.sh  docker-compose.yml
docs/: ARCHITECTURE.md  CONTEXT_TYPES.md  HOOKS.md  MCP_DESIGN.md  SESSION_2026-02-02.md  SESSION_2026-02-03.md  VISION.md  WONDERING.md  analytics-2026-02-25.md
fabrica/: Dockerfile  db_backup_cron.py  docker-entrypoint.sh  pyproject.toml  server.py
forge/: Dockerfile  pyproject.toml  server.py
portal/: Dockerfile  main.py  requirements.txt
quies/agents/: mcp.json  quies-archaeologist.md  quies-consolidator.md  quies-explorer.md  quies-ruminator.md
quies/daemon/: config.yaml  conversation_harvester.py  db.py  requirements.txt  settings.py  somnia_daemon.py  sticky_notes.py  work_queue.py
quies/docker/: Dockerfile  docker-compose.yml  entrypoint.sh
quies/mcp/: requirements.txt  somnia_mcp.py
quies/prompts/: archaeology.md  consolidation.md  rumination.md  solo_work.md  wakeup.md
quies/schema/: 002_activity.sql  003_pinned_nodes.sql  004_stm_graph.sql  init.sql  pg_005_dream_notes.sql  pg_006_memory_layer.sql  pg_006_structural_edges.sql  pg_007_system_log.sql  pg_008_work_queue.sql  pg_009_foundational.sql  pg_010_epistemic_status.sql  pg_011_edge_decay.sql  pg_012_seed_graph.sql  pg_013_agent_runs.sql  pg_init.sql
quies/scripts/: analytics_report.py  backup_graph.py  sltm_rescue.py  test_cli_output.py
router/: generate-domain-index.sh  nginx.conf
shared/: __init__.py
shared/secrets/: __init__.py  bootstrap.py  config.py  interface.py
shared/secrets/backends/: __init__.py  env.py  file.py  onepassword.py
vigil/: CLAUDE.md  Dockerfile  config.py  pyproject.toml  server.py
vigil/api/: browser.py  files.py  store.py
vigil/core/: binding_helpers.py  bindings.py  credentials.py  db.py  paths.py  registry.py  scope.py  shell.py
vigil/schema/: 001_store_entities.sql
vigil/scripts/: cost_savings_report.py  outlook_oauth_bootstrap.py  project_dashboard.py
vigil/services/: __init__.py
vigil/services/calendarservice/: __init__.py  tools.py
vigil/services/calendarservice/adapters/: __init__.py  gcal.py
vigil/services/contacts/: __init__.py  tools.py
vigil/services/contacts/adapters/: __init__.py
vigil/services/mail/: __init__.py  tools.py
vigil/services/mail/adapters/: __init__.py  outlook.py
vigil/services/notifications/: __init__.py  interface.py  manager.py  notification_channels.example.json  tools.py
vigil/services/notifications/adapters/: __init__.py  email.py  signal.py  twilio.py
vigil/services/storage/: __init__.py  manager.py  tools.py
vigil/services/storage/adapters/: __init__.py  gdrive.py
vigil/services/supernote/: __init__.py  converter.py  tools.py
vigil/tests/: conftest.py  test_context.py  test_filesystem.py  test_git.py  test_paths.py  test_services_manager.py  test_shell.py
vigil/tools/: bindings_tool.py  context.py  dashboard.py  entities.py  filesystem.py  git.py  publishing.py  relationships.py  secrets.py  session.py  shares.py  shell.py  types.py
