[project]
name = "forge"
version = "1.0.0"
description = "Constellation Forge — workbench MCP with full GIS/Python/Node toolchain"
requires-python = ">=3.12"
dependencies = [
    # MCP framework
    "fastmcp>=2.0.0",
    "uvicorn>=0.30.0",
    # Core data science
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.2",
    "pillow>=10.0",
    # Matplotlib + mapping
    "matplotlib>=3.8",
    "contextily>=1.6",
    # GIS / geospatial
    "shapely>=2.0",
    "pyproj>=3.6",
    "fiona>=1.9",
    "geopandas>=0.14",
    "rasterio>=1.3",
    # OSM routing and street networks
    "osmnx>=1.9",
    "python-osmium>=3.7",
    # Document generation
    "reportlab>=4.0",
    "openpyxl>=3.1",
    # HTTP
    "requests>=2.31",
    "httpx>=0.27",
    "aiohttp>=3.9",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
